--- a/shop.html
+++ b/shop.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+
+<!DOCTYPE html>
+
 <html lang="en">
 <head>
 <meta content="width=device-width, initial-scale=1" name="viewport"/><meta charset="utf-8"/>
@@ -63,6 +66,58 @@ h2 { text-align: center; margin-bottom: 12px; }
   z-index: 1;
   display: none;
 }
+
+/* === Mobile Sticky Footer === */
+.mobile-nav {
+  display: none;
+}
+@media (max-width: 768px) {
+  .mobile-nav {
+    display: flex;
+    position: fixed;
+    bottom: 0;
+    height: 56px;
+    width: 100%;
+    background-color: #f4a940;
+    justify-content: space-around;
+    align-items: center;
+    z-index: 1000;
+    box-shadow: 0 -2px 6px rgba(0, 0, 0, 0.1);
+    padding: 0;
+  }
+
+  .mobile-nav a {
+    font-size: 20px;
+    height: 56px;
+    line-height: 56px;
+    padding: 0;
+    margin: 0;
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    color: black;
+    position: relative;
+  }
+
+  #cart-count {
+    position: absolute;
+    top: 6px;
+    right: 10px;
+    background: red;
+    color: white;
+    font-size: 11px;
+    min-width: 16px;
+    height: 16px;
+    border-radius: 8px;
+    padding: 0 5px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
 </style>
 </head>
 <body>
@@ -82,11 +137,11 @@ h2 { text-align: center; margin-bottom: 12px; }
 <a href="projects.html">Projects</a>
 <a href="contact.html">Contact</a>
 <!-- Cart Icon START -->
-<a href="cart.html" class="cart-icon-link" aria-label="View shopping cart" title="View cart">
-  <span class="cart-icon">
+<a aria-label="View shopping cart" class="cart-icon-link" href="cart.html" title="View cart">
+<span class="cart-icon">
     🛒
-    <span id="cart-count-badge" class="cart-count-badge">0</span>
-  </span>
+    <span class="cart-count-badge" id="cart-count-badge">0</span>
+</span>
 </a>
 <!-- Cart Icon END -->
 </nav>
@@ -97,136 +152,128 @@ h2 { text-align: center; margin-bottom: 12px; }
         Note: A minimum deposit of 50% is required for installation to commence.
 </p>
 <div class="grid">
-  <!-- ... all product-cards unchanged ... -->
-  <div class="product-card">
-    <img alt="1kW Solar System" src="images/solar1kw.jpg"/>
-    <div class="product-info">
-      <h3>1 kW Solar System</h3>
-      <p>Best for small homes, bedsitters, or shops. Runs lights, TV, phone/laptop, and a small fridge for backup.</p>
-      <p>Total Price: KES 150,000</p>
-    </div>
-    <input id="dep1" placeholder="Enter your deposit (KES)" type="number"/>
-    <button class="loan-btn"
-      onclick="addToCart(
+<!-- ... all product-cards unchanged ... -->
+<div class="product-card">
+<img alt="1kW Solar System" src="images/solar1kw.jpg"/>
+<div class="product-info">
+<h3>1 kW Solar System</h3>
+<p>Best for small homes, bedsitters, or shops. Runs lights, TV, phone/laptop, and a small fridge for backup.</p>
+<p>Total Price: KES 150,000</p>
+</div>
+<input id="dep1" placeholder="Enter your deposit (KES)" type="number"/>
+<button class="loan-btn" onclick="addToCart(
         '1 kW Solar System',
         150000,
         'dep1',
         'Best for small homes, bedsitters, or shops. Runs lights, TV, phone/laptop, and a small fridge for backup.'
       )">Add to Cart</button>
-  </div>
-  <!-- ... rest of product-cards unchanged ... -->
-  <div class="product-card">
-    <img alt="3kW Solar System" src="images/solar3kw.jpg"/>
-    <div class="product-info">
-      <h3>3 kW Solar System</h3>
-      <p>For medium homes, small offices, kiosks or shops. Handles lighting, TV, freezer, up to 2 fridges, iron, microwave, and essential business loads.</p>
-      <p>Total Price: KES 400,000</p>
-    </div>
-    <input id="dep3" placeholder="Enter your deposit (KES)" type="number"/>
-    <button class="loan-btn"
-      onclick="addToCart(
+</div>
+<!-- ... rest of product-cards unchanged ... -->
+<div class="product-card">
+<img alt="3kW Solar System" src="images/solar3kw.jpg"/>
+<div class="product-info">
+<h3>3 kW Solar System</h3>
+<p>For medium homes, small offices, kiosks or shops. Handles lighting, TV, freezer, up to 2 fridges, iron, microwave, and essential business loads.</p>
+<p>Total Price: KES 400,000</p>
+</div>
+<input id="dep3" placeholder="Enter your deposit (KES)" type="number"/>
+<button class="loan-btn" onclick="addToCart(
         '3 kW Solar System',
         400000,
         'dep3',
         'For medium homes, small offices, kiosks or shops. Handles lighting, TV, freezer, up to 2 fridges, iron, microwave, and essential business loads.'
       )">Add to Cart</button>
-  </div>
-  <div class="product-card">
-    <img alt="6kW Solar System" src="images/solar6kw.jpg"/>
-    <div class="product-info">
-      <h3>6 kW Solar System</h3>
-      <p>Large homes, small businesses, restaurants. Runs multiple kitchen devices (fridge, freezer, microwave, fryer), computers, CCTV, Wi-Fi, lighting.</p>
-      <p>Total Price: KES 700,000</p>
-    </div>
-    <input id="dep6" placeholder="Enter your deposit (KES)" type="number"/>
-    <button class="loan-btn"
-      onclick="addToCart(
+</div>
+<div class="product-card">
+<img alt="6kW Solar System" src="images/solar6kw.jpg"/>
+<div class="product-info">
+<h3>6 kW Solar System</h3>
+<p>Large homes, small businesses, restaurants. Runs multiple kitchen devices (fridge, freezer, microwave, fryer), computers, CCTV, Wi-Fi, lighting.</p>
+<p>Total Price: KES 700,000</p>
+</div>
+<input id="dep6" placeholder="Enter your deposit (KES)" type="number"/>
+<button class="loan-btn" onclick="addToCart(
         '6 kW Solar System',
         700000,
         'dep6',
         'Large homes, small businesses, restaurants. Runs multiple kitchen devices (fridge, freezer, microwave, fryer), computers, CCTV, Wi-Fi, lighting.'
       )">Add to Cart</button>
-  </div>
-  <div class="product-card">
-    <img alt="9kW Solar System" src="images/solar9kw.jpg"/>
-    <div class="product-info">
-      <h3>9 kW Solar System</h3>
-      <p>Large home or mid-sized business, partial kitchen for fast food. All of above plus 3 kitchen devices at once: commercial freezer, fryer, coffee machine.</p>
-      <p>Total Price: KES 1,050,000</p>
-    </div>
-    <input id="dep9" placeholder="Enter your deposit (KES)" type="number"/>
-    <button class="loan-btn"
-      onclick="addToCart(
+</div>
+<div class="product-card">
+<img alt="9kW Solar System" src="images/solar9kw.jpg"/>
+<div class="product-info">
+<h3>9 kW Solar System</h3>
+<p>Large home or mid-sized business, partial kitchen for fast food. All of above plus 3 kitchen devices at once: commercial freezer, fryer, coffee machine.</p>
+<p>Total Price: KES 1,050,000</p>
+</div>
+<input id="dep9" placeholder="Enter your deposit (KES)" type="number"/>
+<button class="loan-btn" onclick="addToCart(
         '9 kW Solar System',
         1050000,
         'dep9',
         'Large home or mid-sized business, partial kitchen for fast food. All of above plus 3 kitchen devices at once: commercial freezer, fryer, coffee machine.'
       )">Add to Cart</button>
-  </div>
-  <div class="product-card">
-    <img alt="450W Monocrystalline Solar Panel" src="images/panel450w.jpg"/>
-    <div class="product-info">
-      <h3>450W Monocrystalline Solar Panel</h3>
-      <p>High efficiency solar module for home &amp; industrial use.</p>
-      <p>Total Price: KES 29,000</p>
-    </div>
-    <input id="dep_panel" placeholder="Enter your deposit (KES)" type="number"/>
-    <button class="loan-btn"
-      onclick="addToCart(
+</div>
+<div class="product-card">
+<img alt="450W Monocrystalline Solar Panel" src="images/panel450w.jpg"/>
+<div class="product-info">
+<h3>450W Monocrystalline Solar Panel</h3>
+<p>High efficiency solar module for home &amp; industrial use.</p>
+<p>Total Price: KES 29,000</p>
+</div>
+<input id="dep_panel" placeholder="Enter your deposit (KES)" type="number"/>
+<button class="loan-btn" onclick="addToCart(
         '450W Monocrystalline Solar Panel',
         29000,
         'dep_panel',
-        'High efficiency solar module for home & industrial use.'
+        'High efficiency solar module for home &amp; industrial use.'
       )">Add to Cart</button>
-  </div>
-  <div class="product-card">
-    <div class="product-img-placeholder"></div>
-    <div class="product-info">
-      <h3>Battery 24V 100Ah</h3>
-      <p>LiFePO₄ Battery 24V 100Ah – Safe lithium storage with long life and fast charge.</p>
-      <p>Total Price: KES 60,000</p>
-    </div>
-    <input id="dep_batt24" placeholder="Enter your deposit (KES)" type="number"/>
-    <button class="loan-btn"
-      onclick="addToCart(
+</div>
+<div class="product-card">
+<div class="product-img-placeholder"></div>
+<div class="product-info">
+<h3>Battery 24V 100Ah</h3>
+<p>LiFePO₄ Battery 24V 100Ah – Safe lithium storage with long life and fast charge.</p>
+<p>Total Price: KES 60,000</p>
+</div>
+<input id="dep_batt24" placeholder="Enter your deposit (KES)" type="number"/>
+<button class="loan-btn" onclick="addToCart(
         'Battery 24V 100Ah',
         60000,
         'dep_batt24',
         'LiFePO₄ Battery 24V 100Ah – Safe lithium storage with long life and fast charge.'
       )">Add to Cart</button>
-  </div>
-  <div class="product-card">
-    <div class="product-img-placeholder"></div>
-    <div class="product-info">
-      <h3>Solar Cleaning Kit</h3>
-      <p>Essential tools for keeping your system at peak efficiency.</p>
-      <p>Total Price: KES 4,500</p>
-    </div>
-    <input id="dep_cleaning" placeholder="Enter your deposit (KES)" type="number"/>
-    <button class="loan-btn"
-      onclick="addToCart(
+</div>
+<div class="product-card">
+<div class="product-img-placeholder"></div>
+<div class="product-info">
+<h3>Solar Cleaning Kit</h3>
+<p>Essential tools for keeping your system at peak efficiency.</p>
+<p>Total Price: KES 4,500</p>
+</div>
+<input id="dep_cleaning" placeholder="Enter your deposit (KES)" type="number"/>
+<button class="loan-btn" onclick="addToCart(
         'Solar Cleaning Kit',
         4500,
         'dep_cleaning',
         'Essential tools for keeping your system at peak efficiency.'
       )">Add to Cart</button>
-  </div>
-  <div class="product-card">
-    <div class="product-img-placeholder"></div>
-    <div class="product-info">
-      <h3>5kW Inverter</h3>
-      <p>Seamlessly manage solar and grid power with hybrid tech.</p>
-      <p>Total Price: KES 85,000</p>
-    </div>
-    <input id="dep_inv5kw" placeholder="Enter your deposit (KES)" type="number"/>
-    <button class="loan-btn"
-      onclick="addToCart(
+</div>
+<div class="product-card">
+<div class="product-img-placeholder"></div>
+<div class="product-info">
+<h3>5kW Inverter</h3>
+<p>Seamlessly manage solar and grid power with hybrid tech.</p>
+<p>Total Price: KES 85,000</p>
+</div>
+<input id="dep_inv5kw" placeholder="Enter your deposit (KES)" type="number"/>
+<button class="loan-btn" onclick="addToCart(
         '5kW Inverter',
         85000,
         'dep_inv5kw',
         'Seamlessly manage solar and grid power with hybrid tech.'
       )">Add to Cart</button>
-  </div>
+</div>
 </div>
 </div>
 <footer>
@@ -235,7 +282,6 @@ h2 { text-align: center; margin-bottom: 12px; }
 </div>
 <p>© 2025 WattSun Solar. All rights reserved.</p>
 </footer>
-
 <script>
   const navToggle = document.querySelector('.nav-toggle');
   const header = document.querySelector('header');
@@ -247,25 +293,28 @@ h2 { text-align: center; margin-bottom: 12px; }
   });
 </script>
 <script>
-  // --- CART BADGE LOGIC ---
-  function updateCartCountBadge() {
-    let count = 0;
-    try {
-      const cart = JSON.parse(localStorage.getItem("cart")) || [];
-      count = cart.reduce((sum, item) => sum + (item.quantity || 1), 0);
-    } catch(e){}
-    const badge = document.getElementById('cart-count-badge');
-    if (!badge) return;
-    if (count > 0) {
-      badge.textContent = count;
-      badge.style.display = 'flex';
-    } else {
-      badge.style.display = 'none';
-    }
+function updateCartCountBadge() {
+  let count = 0;
+  try {
+    const cart = JSON.parse(localStorage.getItem("cart")) || [];
+    count = cart.reduce((sum, item) => sum + (item.quantity || 1), 0);
+  } catch (e) {}
+
+  const badge = document.getElementById('cart-count-badge');
+  if (badge) {
+    badge.textContent = count;
+    badge.style.display = count > 0 ? 'flex' : 'none';
   }
-  document.addEventListener('DOMContentLoaded', updateCartCountBadge);
-  window.addEventListener('storage', updateCartCountBadge);
-</script>
+
+  const mobileCount = document.getElementById('cart-count');
+  if (mobileCount) {
+    mobileCount.textContent = count;
+  }
+}
+
+document.addEventListener('DOMContentLoaded', updateCartCountBadge);
+window.addEventListener('storage', updateCartCountBadge);
+        </script>
 <script>
 document.addEventListener("DOMContentLoaded", function () {
   window.addToCart = function(item, price, inputId, description) {
@@ -309,5 +358,11 @@ document.addEventListener("DOMContentLoaded", function () {
   updateCartCountBadge();
 });
 </script>
+<footer class="mobile-nav">
+<a aria-label="Home" href="index.html">🏠</a>
+<a aria-label="Account" href="account.html">👤</a>
+<a aria-label="Cart" href="cart.html">🛒<span id="cart-count">0</span></a>
+<a aria-label="Menu" href="javascript:void(0);" onclick="document.querySelector('.nav-toggle').click();">☰</a>
+</footer>
 </body>
 </html>
